# DroneDetection-NeuralNetwork

./: .gitignore  Dockerfile  README.md  STARTING_GUIDE.md  docker-compose.yml  environment.yml  hunter_gui.py  launch_gui.bat  launch_gui.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh
configs/: default.yaml
configs/profiles/: high_accuracy.yaml  low_latency.yaml
data/detection/: .gitkeep
data/evaluation/: .gitkeep
data/siamese/: .gitkeep
docs/: README.md  api-reference.md  configuration.md  installation.md  training.md  user-guide.md
scripts/: export_model.py  run_inference.py  run_training.py
src/hunter/: __init__.py  __main__.py  main.py
src/hunter/container/: __init__.py  container.py
src/hunter/core/: __init__.py  config.py  exceptions.py  logger.py  metrics.py  timer.py
src/hunter/detection/: __init__.py  hybrid_detector.py  siamese_embedder.py  siamese_verifier.py  stub.py  yolo11_detector.py
src/hunter/domain/: __init__.py  detection.py  frame.py  track.py
src/hunter/factories/: __init__.py
src/hunter/interfaces/: __init__.py  base.py  detector.py  pipeline.py  tracker.py
src/hunter/models/: __init__.py
src/hunter/models/detector/: __init__.py  base.py  yolo_detector.py
src/hunter/models/embedder/: __init__.py  base.py  siamese_embedder.py
src/hunter/pipeline/: __init__.py  orchestrator.py
src/hunter/pipeline/ingest/: __init__.py  base.py  file_ingest.py  frame_packet.py
src/hunter/pipeline/preprocess/: __init__.py  transforms.py
src/hunter/tracking/: __init__.py  association.py  kalman_filter.py  state_machine.py  track.py  tracker.py  trajectory.py
src/hunter/training_advisor/: __init__.py  advisor.py  config.py
src/hunter/training_advisor/actions/: __init__.py  lr_action.py  regularization_action.py
src/hunter/training_advisor/analyzers/: __init__.py  base.py  convergence.py  detection.py  learning_rate.py  overfitting.py  siamese.py
src/hunter/training_advisor/collectors/: __init__.py  base.py  csv_collector.py  stub.py  yolo.py
src/hunter/training_advisor/domain/: __init__.py  issues.py  metrics.py  recommendations.py
src/hunter/training_advisor/engine/: __init__.py  action_registry.py  decision_engine.py  recommendation_engine.py
src/hunter/training_advisor/interfaces/: __init__.py  analyzer.py  collector.py  reporter.py
src/hunter/training_advisor/llm/: __init__.py  openai_provider.py  stub_provider.py
src/hunter/training_advisor/reporters/: __init__.py  base.py  console_reporter.py  markdown_reporter.py
src/hunter/training_advisor/tuner/: __init__.py  auto_tuner.py
src/hunter/utils/: __init__.py  bbox.py  checksum.py  iou.py
tests/: conftest.py
tests/contract/: __init__.py  test_detector_contracts.py  test_tracker_contracts.py
tests/unit/: test_container.py  test_detection.py  test_domain.py  test_kalman_filter.py  test_pipeline.py  test_state_machine.py  test_utils.py
tests/unit/training_advisor/: __init__.py  test_advisor.py  test_analyzers.py  test_collectors.py  test_config.py  test_domain.py  test_engine.py  test_interfaces.py
