[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunter-drone"
version = "1.0.0"
description = "Real-time drone detection and tracking system using YOLO11 and Siamese networks with hybrid routing"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
authors = [
    {name = "Hunter Drone Team"}
]
keywords = ["drone", "detection", "tracking", "yolo", "siamese", "computer-vision", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    # Core ML frameworks
    "torch>=2.0.0,<2.3.0",
    "torchvision>=0.15.0,<0.18.0",
    "ultralytics>=8.1.0,<8.4.0",

    # Inference runtime
    "onnxruntime-gpu>=1.16.0,<1.18.0",

    # Computer vision
    "opencv-python>=4.8.0,<4.10.0",

    # Scientific computing
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0,<1.13.0",

    # Kalman filtering (requires numpy<2.0)
    "filterpy>=1.4.5,<1.5.0",

    # Configuration & validation
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pyyaml>=6.0,<7.0",

    # Logging
    "structlog>=23.0.0,<25.0.0",

    # Dependency injection
    "dependency-injector>=4.41.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "ruff>=0.1.0,<0.2.0",
    "mypy>=1.5.0,<2.0.0",
    "hypothesis>=6.80.0,<7.0.0",
]

training = [
    "tensorboard>=2.14.0,<3.0.0",
    "mlflow>=2.7.0,<3.0.0",
    "albumentations>=1.3.0,<2.0.0",
    "wandb>=0.15.0,<1.0.0",
]

monitoring = [
    "prometheus-client>=0.17.0,<1.0.0",
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
]

all = [
    "hunter-drone[dev,training,monitoring]",
]

[project.scripts]
# Main CLI with subcommands (run, train, evaluate, validate, info)
hunter = "hunter.__main__:main"
# Legacy/shortcut commands
hunter-run = "hunter.main:main"

[project.urls]
Homepage = "https://github.com/hunter-drone/hunter-drone"
Documentation = "https://github.com/hunter-drone/hunter-drone#readme"
Repository = "https://github.com/hunter-drone/hunter-drone"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hunter = ["py.typed"]

# ============================================
# Tool Configurations
# ============================================

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["hunter"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function calls in argument defaults
    "ARG001", # unused function argument (common in interfaces)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "S101"]
"src/hunter/interfaces/*" = ["ARG001"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
    "integration: marks tests as integration tests",
    "contract: marks tests as contract tests",
    "gpu: marks tests requiring GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/hunter"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true
